samples/_failures_safe/1761321760_0854b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc6adbd9.c: In function ‘main’:
./samples/SAFE/__tmp_dc6adbd9.c:163:9: error: expected declaration or statement at end of input
  163 |         int from, to, weight;
      |         ^~~
./samples/SAFE/__tmp_dc6adbd9.c:163:9: error: expected declaration or statement at end of input
